Prepare v0.1.0-alpha.5 release